처음 뜨는 Fragment 를 MainFragment 에서 MenuFragment 로 변경

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,6 @@
         android:id="@+id/mainFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="org.androidtown.fragment.MainFragment" />
+        android:name="org.androidtown.fragment.MenuFragment" />
 
 </RelativeLayout>
